remove the isVisible property from KuiExpressionItemPopover, adapt tests and example, fix intendation and quoting errors

--- a/ui_framework/src/components/expression/_expression.scss
+++ b/ui_framework/src/components/expression/_expression.scss
@@ -48,12 +48,6 @@
 
     // 1. Angulars ng-hide uses display: none. To use animations we need to use visibility instead.
     &.ng-hide,
-    &.kuiExpressionItem__popover--isHidden {
-      display: block !important; // 1
-      visibility: hidden;
-      opacity: 0;
-      transform: translateY(0px) translateZ(0);
-    }
 
     &:before {
       position: absolute;
